# skipper

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  docker-compose.yml  skipper.toml.example
crates/openfang-shipwright/: Cargo.toml  README.md
crates/openfang-shipwright/agents/shipwright/: HAND.toml  SKILL.md  system_prompt.md
crates/openfang-shipwright/src/: api.rs  config.rs  dashboard.rs  hand.rs  lib.rs  tools.rs
crates/openfang-shipwright/src/decision/: autonomy.rs  mod.rs  scoring.rs  signals.rs
crates/openfang-shipwright/src/fleet/: daemon.rs  dispatch.rs  patrol.rs
crates/openfang-shipwright/src/github/: checks.rs  deployments.rs  mod.rs  pr.rs
crates/openfang-shipwright/src/intelligence/: dora.rs  mod.rs  prediction.rs
crates/openfang-shipwright/src/memory/: architecture.rs  learning.rs  mod.rs  patterns.rs
crates/openfang-shipwright/src/pipeline/: composer.rs  mod.rs  self_healing.rs  stages.rs
crates/openfang-shipwright/tests/: async_api_tests.rs  concurrent_access_tests.rs  config_tests.rs  convergence_tests.rs  decision_engine_tests.rs  edge_case_tests.rs  integration_tests.rs  memory_tests.rs  nan_infinity_tests.rs  state_machine_tests.rs
crates/skipper-api/: Cargo.toml
crates/skipper-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openai_compat.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/skipper-api/src/routes/: agents.rs  budget.rs  channels.rs  hands.rs  health.rs  integrations.rs  mcp.rs  misc.rs  mod.rs  network.rs  pipelines.rs  security.rs  settings.rs  skills.rs  workflows.rs
crates/skipper-api/static/: index_body.html  index_head.html
crates/skipper-api/static/css/: components.css  layout.css  theme.css
crates/skipper-api/static/js/: api.js  app.js
crates/skipper-api/static/js/pages/: agents.js  approvals.js  channels.js  chat.js  fleet.js  hands.js  logs.js  memory.js  overview.js  pipelines.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/skipper-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs  mcp_test.rs
crates/skipper-cli/: Cargo.toml
crates/skipper-cli/src/: bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  templates.rs  ui.rs
crates/skipper-cli/src/commands/: agent.rs  approvals.rs  channel.rs  config.rs  cron.rs  daemon.rs  devices.rs  doctor.rs  init.rs  integration.rs  memory.rs  message.rs  migrate.rs  mod.rs  models.rs  providers.rs  scaffold.rs  security.rs  skill.rs  system.rs  workflow.rs
crates/skipper-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/skipper-cli/src/tui/screens/: agents.rs  audit.rs  chat.rs  dashboard.rs  extensions.rs  hands.rs  init_wizard.rs  logs.rs  memory.rs  peers.rs  sessions.rs  settings.rs  skills.rs  templates.rs  triggers.rs  usage.rs  welcome.rs  wizard.rs  workflows.rs
crates/skipper-desktop/: Cargo.toml  tauri.conf.json
crates/skipper-desktop/capabilities/: default.json
crates/skipper-desktop/src/: commands.rs  lib.rs  main.rs  server.rs  shortcuts.rs  tray.rs  updater.rs
crates/skipper-hands/: Cargo.toml
crates/skipper-hands/bundled/browser/: SKILL.md
crates/skipper-hands/bundled/twitter/: HAND.toml
crates/skipper-hands/src/: bundled.rs  lib.rs  registry.rs
crates/skipper-kernel/: Cargo.toml
crates/skipper-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  capabilities.rs  config_reload.rs  cron.rs  error.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  metering.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/skipper-kernel/src/config/: mod.rs
crates/skipper-kernel/src/kernel/: agents.rs  background_impl.rs  config.rs  handle_impl.rs  hands.rs  messaging.rs  mod.rs  networking.rs  sessions.rs  tools.rs
crates/skipper-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/skipper-memory/: Cargo.toml
crates/skipper-memory/src/: consolidation.rs  knowledge.rs  lib.rs  semantic.rs  session.rs  structured.rs  substrate.rs  usage.rs
crates/skipper-runtime/: Cargo.toml
crates/skipper-runtime/src/: a2a.rs  agent_loop.rs  apply_patch.rs  auth_cooldown.rs  browser.rs  browser_bridge.py  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  host_functions.rs  image_gen.rs  kernel_handle.rs  lib.rs  link_understanding.rs  llm_driver.rs  llm_errors.rs  mcp.rs  mcp_server.rs  media_understanding.rs  model_catalog.rs  prompt_builder.rs  python_runtime.rs  retry.rs  routing.rs  sandbox.rs  session_repair.rs  subprocess_sandbox.rs  tool_runner.rs  tts.rs  web_fetch.rs  web_search.rs  workspace_context.rs
crates/skipper-runtime/src/drivers/: anthropic.rs  claude_code.rs  copilot.rs  fallback.rs  gemini.rs  mod.rs  openai.rs
crates/skipper-runtime/src/tools/: agents.rs  browser.rs  collaboration.rs  filesystem.rs  media.rs  mod.rs  shell.rs  web.rs
crates/skipper-shipwright/: Cargo.toml  README.md
crates/skipper-shipwright/agents/shipwright/: system_prompt.md
crates/skipper-shipwright/src/: config.rs  fleet_bridge.rs  hand.rs  lib.rs  memory_bridge.rs  subprocess.rs  tools.rs
crates/skipper-shipwright/src/decision/: mod.rs  scoring.rs  signals.rs
crates/skipper-shipwright/src/fleet/: mod.rs
crates/skipper-shipwright/src/github/: graphql.rs  mod.rs
crates/skipper-shipwright/src/intelligence/: optimization.rs
crates/skipper-shipwright/src/memory/: learning.rs  mod.rs  patterns.rs
crates/skipper-shipwright/src/pipeline/: stages.rs  templates.rs
crates/skipper-shipwright/tests/: async_api_tests.rs  concurrent_access_tests.rs  config_tests.rs  convergence_tests.rs  decision_engine_tests.rs  edge_case_tests.rs  integration_tests.rs  memory_tests.rs  nan_infinity_tests.rs  state_machine_tests.rs
deploy/: skipper.service
docs/: README.md  agent-templates.md  api-reference.md  (+14 more)
(+151 files in other folders)
