[package]
name = "skipper-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native desktop application for the Skipper Agent OS (Tauri 2.0)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
skipper-kernel = { path = "../skipper-kernel" }
skipper-api = { path = "../skipper-api" }
skipper-types = { path = "../skipper-types" }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
toml = { workspace = true }
open = "5"

[features]
# Tauri uses custom-protocol in production builds
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "skipper-desktop"
path = "src/main.rs"
