[package]
name = "skipper-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the Skipper Agent OS"

[dependencies]
skipper-types = { path = "../skipper-types" }
skipper-memory = { path = "../skipper-memory" }
skipper-runtime = { path = "../skipper-runtime" }
skipper-skills = { path = "../skipper-skills" }
skipper-hands = { path = "../skipper-hands" }
skipper-extensions = { path = "../skipper-extensions" }
skipper-wire = { path = "../skipper-wire" }
skipper-channels = { path = "../skipper-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
