[package]
name = "skipper-shipwright"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Software Engineering Hand — autonomous delivery pipelines"

[dependencies]
skipper-types = { path = "../skipper-types" }
skipper-memory = { path = "../skipper-memory" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rusqlite = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = { workspace = true }
